--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "estoquefiap",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,7 +10,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-picker/picker": "^2.11.0",
     "expo": "~53.0.9",
+    "expo-camera": "^16.1.6",
+    "expo-router": "^5.0.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2"
